--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 training/training_data/
 training/Pickleball-Vision-1/
 training/pickle-court-keypoints-1/
+training/Court-Detection-2/
 runs/
 
 # models
