--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ training/training_data/
 training/Pickleball-Vision-1/
 training/pickle-court-keypoints-1/
 training/Court-Detection-2/
+training/pickle-court-keypoints-5/
 runs/
 
 # models
